--- a/mediawiki-convert/mediawiki-convert.cabal
+++ b/mediawiki-convert/mediawiki-convert.cabal
@@ -38,7 +38,7 @@ library
                        lens,
                        serialise >= 0.1,
                        bytestring >= 0.10,
-                       deepseq,
+                       json-stream >=0.4 && <0.5,
                        deepseq,
                        filepath >=1.4 && <1.5,
                        unordered-containers >=0.2 && <0.3,
