--- a/multilang-car/multilang-car.cabal
+++ b/multilang-car/multilang-car.cabal
@@ -11,9 +11,8 @@ copyright:           (c) 2017 Ben Gamari
 build-type:          Simple
 cabal-version:       >=1.10
 
-
-executable multilang-car
-  main-is:             LangExtract.hs
+library
+  exposed-modules:     WikiDataQid
   other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TypeApplications, DeriveGeneric
   build-depends:       base,
                        aeson >=1.1 && <1.5,
@@ -27,6 +26,24 @@ executable multilang-car
                        trec-car-tools,
                        mediawiki-convert
   default-language:    Haskell2010
+
+
+executable multilang-car
+  main-is:             WikiDataCrossSite.hs
+  other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TypeApplications, DeriveGeneric
+  build-depends:       base,
+                       aeson >=1.1 && <1.5,
+                       hashable >=1.2 && <1.4,
+                       bytestring >=0.10 && <0.11,
+                       unordered-containers >=0.2 && <0.3,
+                       text >=1.2 && <1.3,
+                       serialise >=0.2 && <0.3,
+                       json-stream >=0.4 && <0.5,
+                       trec-car-types,
+                       trec-car-tools,
+                       mediawiki-convert
+  default-language:    Haskell2010
+
 
 executable multilang-car-index
   main-is:             LangIndex.hs
