Wikidata: open file with as-needed bz2 compression

--- a/mediawiki-convert/mediawiki-convert.cabal
+++ b/mediawiki-convert/mediawiki-convert.cabal
@@ -62,6 +62,7 @@ library
                        regex-compat,
                        simplir,
                        simplir-io,
+                       simplir-data-source,
                        simplir-stop-words,
                        optparse-applicative,
                        trec-car-types
