--- a/mediawiki-convert/mediawiki-convert.cabal
+++ b/mediawiki-convert/mediawiki-convert.cabal
@@ -26,8 +26,9 @@ library
   exposed-modules:     CAR.KnowledgeBase
                        CAR.FillMetadata
                        CAR.FilterPred
-                       WikiData
                        CAR.Utils.Redirects
+                       WikiData
+                       StreamJSON
   hs-source-dirs:      src
   default-language:    Haskell2010
   build-depends:       base >=4.11 && <5,
@@ -48,6 +49,9 @@ library
                        trifecta >= 1.5,
                        log-domain,
                        foldl,
+                       pipes,
+                       pipes-safe,
+                       pipes-bytestring,
                        network-uri,
                        dlist,
                        vector,
