--- a/multilang-car/multilang-car.cabal
+++ b/multilang-car/multilang-car.cabal
@@ -11,24 +11,24 @@ copyright:           (c) 2017 Ben Gamari
 build-type:          Simple
 cabal-version:       >=1.10
 
-library
-  exposed-modules:     WikiDataQid
-  other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TypeApplications, DeriveGeneric
-  build-depends:       base,
-                       aeson >=1.1 && <1.5,
-                       hashable >=1.2 && <1.4,
-                       bytestring >=0.10 && <0.11,
-                       unordered-containers >=0.2 && <0.3,
-                       text >=1.2 && <1.3,
-                       serialise >=0.2 && <0.3,
-                       json-stream >=0.4 && <0.5,
-                       trec-car-types,
-                       trec-car-tools,
-                       mediawiki-convert
-  default-language:    Haskell2010
+-- library
+--   exposed-modules:     src/WikiDataQid
+--   other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TypeApplications, DeriveGeneric
+--   build-depends:       base,
+--                        aeson >=1.1 && <1.5,
+--                        hashable >=1.2 && <1.4,
+--                        bytestring >=0.10 && <0.11,
+--                        unordered-containers >=0.2 && <0.3,
+--                        text >=1.2 && <1.3,
+--                        serialise >=0.2 && <0.3,
+--                        json-stream >=0.4 && <0.5,
+--                        trec-car-types,
+--                        trec-car-tools,
+--                        mediawiki-convert
+--   default-language:    Haskell2010
 
 
-executable multilang-car
+executable trec-car-cross-site
   main-is:             WikiDataCrossSite.hs
   other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TypeApplications, DeriveGeneric
   build-depends:       base,
@@ -44,18 +44,3 @@ executable multilang-car
                        mediawiki-convert
   default-language:    Haskell2010
 
-
-executable multilang-car-index
-  main-is:             LangIndex.hs
-  other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TypeApplications, DeriveGeneric
-  build-depends:       base,
-                       aeson,
-                       hashable >=1.2 && <1.4,
-                       bytestring >=0.10 && <0.11,
-                       unordered-containers >=0.2 && <0.3,
-                       text >=1.2 && <1.3,
-                       serialise >=0.2 && <0.3,
-                       json-stream >=0.4 && <0.5,
-                       trec-car-types,
-                       trec-car-tools
-  default-language:    Haskell2010
