--- a/mediawiki-convert/mediawiki-convert.cabal
+++ b/mediawiki-convert/mediawiki-convert.cabal
@@ -291,6 +291,7 @@ executable trec-car-cross-site
                        parallel >=3.2 && <3.3,
                        json-stream >=0.4 && <0.5,
                        optparse-applicative,
+                       simplir-pipes-utils,
                        simplir-data-source,
                        trec-car-types,
                        trec-car-tools,
