--- a/tqa-import/tqa-import.cabal
+++ b/tqa-import/tqa-import.cabal
@@ -30,12 +30,12 @@ executable tqa-import
   other-extensions:    DeriveAnyClass, DerivingStrategies
   build-depends:       base,
                        text >=1.2 && <1.3,
-                       bytestring >= 0.10,
+                       bytestring >=0.10 && <0.12,
                        unordered-containers >= 0.2,
                        containers,
                        hashable >= 1.2,
                        serialise,
-                       aeson >=1.2 && <1.5,
+                       aeson >=1.5 && <1.6,
                        optparse-applicative >= 0.14,
                        trec-car-types
   default-language:    Haskell2010
@@ -46,12 +46,12 @@ executable tqa-import2
   other-extensions:    DeriveAnyClass, DerivingStrategies
   build-depends:       base,
                        text >=1.2 && <1.3,
-                       bytestring >= 0.10,
+                       bytestring >=0.10 && <0.12,
                        unordered-containers >= 0.2,
                        containers,
                        hashable >= 1.2,
                        serialise,
-                       aeson >=1.2 && <1.5,
+                       aeson >=1.5 && <1.6,
                        optparse-applicative >= 0.14,
                        trec-car-types
   default-language:    Haskell2010
@@ -62,12 +62,12 @@ executable tqa-y3-bulk-rewrite
   other-extensions:    DeriveAnyClass, DerivingStrategies
   build-depends:       base,
                        text >=1.2 && <1.3,
-                       bytestring >= 0.10,
+                       bytestring >=0.10 && <0.12,
                        unordered-containers >= 0.2,
                        containers,
                        hashable >= 1.2,
                        serialise,
-                       aeson >=1.2 && <1.5,
+                       aeson >=1.5 && <1.6,
                        optparse-applicative >= 0.14,
                        trec-car-types,
                        tqa-import
@@ -79,12 +79,12 @@ executable tqa-y3-export
   other-extensions:    DeriveAnyClass, DerivingStrategies
   build-depends:       base,
                        text >=1.2 && <1.3,
-                       bytestring >= 0.10,
+                       bytestring >=0.10 && <0.12,
                        unordered-containers >= 0.2,
                        containers,
                        hashable >= 1.2,
                        serialise,
-                       aeson >=1.2 && <1.5,
+                       aeson >=1.5 && <1.6,
                        optparse-applicative >= 0.14,
                        trec-car-types,
                        tqa-import
@@ -96,12 +96,12 @@ executable topic-import
   other-extensions:    DeriveAnyClass, DerivingStrategies
   build-depends:       base,
                        text >=1.2 && <1.3,
-                       bytestring >= 0.10,
+                       bytestring >=0.10 && <0.12,
                        unordered-containers >= 0.2,
                        containers,
                        hashable >= 1.2,
                        serialise,
-                       aeson >=1.2 && <1.5,
+                       aeson >=1.5 && <1.6,
                        optparse-applicative >= 0.14,
                        trec-car-types
   default-language:    Haskell2010
