CAR.Pages FromJSON (and compatible ToJSON)
executables:
- trec-car-jsonl-export
- trec-car-jsonl-import

--- a/mediawiki-convert/mediawiki-convert.cabal
+++ b/mediawiki-convert/mediawiki-convert.cabal
@@ -20,6 +20,7 @@ library
                        CAR.FillMetadata
                        CAR.FilterPred
                        CAR.Utils.Redirects
+                       CAR.CarJSON
                        WikiData
                        StreamJSON
   hs-source-dirs:      src
@@ -293,7 +294,7 @@ executable trec-car-cross-site
   default-language:    Haskell2010
 
 
-executable trec-car-jsonl
+executable trec-car-jsonl-export
   main-is:             JsonlConversionMain.hs
   ghc-options:         -Wall -threaded -rtsopts -eventlog
   build-depends:       base,
@@ -307,6 +308,28 @@ executable trec-car-jsonl
                        hashable,
                        zlib >=0.6,
                        aeson >= 1.0,
+                       trec-car-tools,
+                       trec-car-types,
+                       mediawiki-convert
+  default-language:    Haskell2010
+
+
+executable trec-car-jsonl-import
+  main-is:             JsonlImport.hs
+  ghc-options:         -Wall -threaded -rtsopts -eventlog
+  build-depends:       base,
+                       bytestring >=0.10 && <0.12,
+                       unordered-containers,
+                       trifecta >= 1.5,
+                       parsers >= 0.12,
+                       ansi-wl-pprint,
+                       text,
+                       optparse-applicative >= 0.12,
+                       hashable,
+                       zlib >=0.6,
+                       aeson >= 1.0,
+                       gitrev,
+                       simplir-data-source,
                        trec-car-tools,
                        trec-car-types,
                        mediawiki-convert
