Widen aeson-bounds

--- a/mediawiki-import/mediawiki-import.cabal
+++ b/mediawiki-import/mediawiki-import.cabal
@@ -31,7 +31,7 @@ library
                        pipes >=4.1 && <4.4,
                        pipes-bytestring >=2.1 && <2.2,
                        pipes-zlib >=0.5 && <0.6,
-                       optparse-applicative >=0.13 && <0.16,
+                       optparse-applicative >=0.13 && <0.17,
                        pipes-attoparsec >=0.5 && <0.6,
                        gitrev,
                        trifecta,
@@ -72,7 +72,7 @@ executable trec-car-import
                        pipes,
                        pipes-bytestring >=2.1 && <2.2,
                        pipes-zlib >=0.4 && <0.6,
-                       optparse-applicative >=0.13 && <0.16,
+                       optparse-applicative,
                        pipes-attoparsec >=0.5 && <0.6,
                        gitrev,
                        trifecta,
