--- a/mediawiki-convert/mediawiki-convert.cabal
+++ b/mediawiki-convert/mediawiki-convert.cabal
@@ -314,6 +314,25 @@ executable trec-car-jsonl-export
   default-language:    Haskell2010
 
 
+executable trec-car-split-jsonl
+  main-is:             SplitJsonL.hs
+  ghc-options:         -Wall -threaded -rtsopts -eventlog
+  build-depends:       base,
+                       bytestring >=0.10 && <0.12,
+                       unordered-containers,
+                       trifecta >= 1.5,
+                       parsers >= 0.12,
+                       split >= 0.2,
+                       ansi-wl-pprint,
+                       text,
+                       optparse-applicative >= 0.12,
+                       zlib >=0.6,
+                       aeson >= 1.0,
+                       trec-car-types,
+                       simplir-data-source
+  default-language:    Haskell2010
+
+
 executable trec-car-jsonl-import
   main-is:             JsonlImport.hs
   ghc-options:         -Wall -threaded -rtsopts -eventlog
