Jsonl exporter for provenance

--- a/mediawiki-convert/mediawiki-convert.cabal
+++ b/mediawiki-convert/mediawiki-convert.cabal
@@ -313,6 +313,25 @@ executable trec-car-jsonl-export
                        mediawiki-convert
   default-language:    Haskell2010
 
+executable trec-car-jsonl-provenance
+  main-is:             JsonlProvenanceExportMain.hs
+  ghc-options:         -Wall -threaded -rtsopts -eventlog
+  build-depends:       base,
+                       bytestring >=0.10 && <0.12,
+                       unordered-containers,
+                       trifecta >= 1.5,
+                       parsers >= 0.12,
+                       ansi-wl-pprint,
+                       text,
+                       optparse-applicative >= 0.12,
+                       hashable,
+                       zlib >=0.6,
+                       aeson >= 1.0,
+                       trec-car-tools,
+                       trec-car-types,
+                       mediawiki-convert
+  default-language:    Haskell2010
+
 
 executable trec-car-split-jsonl
   main-is:             SplitJsonL.hs
