--- a/mediawiki-convert/mediawiki-convert.cabal
+++ b/mediawiki-convert/mediawiki-convert.cabal
@@ -373,6 +373,26 @@ executable trec-car-jsonl-import
   default-language:    Haskell2010
 
 
+
+executable trec-car-cluster-benchmark
+  main-is:             ExportClusterBenchmark.hs
+  other-extensions:    DeriveGeneric, TypeApplications, RecordWildCards, ViewPatterns, OverloadedStrings, RankNTypes, ScopedTypeVariables, GADTs, TemplateHaskell, GeneralizedNewtypeDeriving, QuasiQuotes, StandaloneDeriving, BangPatterns
+  ghc-options:         -Wall -threaded -rtsopts -eventlog
+  build-depends:       base,
+                       serialise,
+                       bytestring >=0.10 && <0.12,
+                       containers,
+                       unordered-containers >=0.2 && <0.3,
+                       text,
+                       aeson >= 1.0,
+                       zlib >=0.6,
+                       optparse-applicative,
+                       filepath,
+                       trec-car-tools,
+                       trec-car-types
+  default-language:    Haskell2010
+
+
 test-suite tests
   main-is:             Test.hs
   type:                exitcode-stdio-1.0
